docs/features/configuration/pomerium-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-buffer-size: 16k
  name: pomerium-demo
  namespace: pomerium-demo
spec:
  rules:
  - host: 'demo.pro.harbur.io'
    http:
      paths:
      - backend:
          serviceName: pomerium-demo-proxy
          servicePort: https
  - host: authorize-demo.pro.harbur.io
    http:
      paths:
      - backend:
          serviceName: pomerium-demo-authorize
          servicePort: https
  - host: authenticate-demo.pro.harbur.io
    http:
      paths:
      - backend:
          serviceName: pomerium-demo-authenticate
          servicePort: https
  tls:
  - hosts:
    - 'demo.pro.harbur.io'
    secretName: demo.pro.harbur.io-tls
